添加了详细的注释

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".FirstActivity"/>
         <activity android:name=".SecondActivity"/>
+        <activity android:name=".ThirdActivity"/>
     </application>
 
 </manifest>
