添加自定义卡尺进度条

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".FirstActivity"/>
         <activity android:name=".SecondActivity"/>
         <activity android:name=".ThirdActivity"/>
+        <activity android:name=".FourActivity"/>
     </application>
 
 </manifest>
