--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     buildToolsVersion "28.0.0"
     defaultConfig {
-        applicationId "com.ns.yc.ycprogress"
+        applicationId "com.yc.ycprogress"
         minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
@@ -20,9 +20,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:28.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
     //公共类
 //    compile 'cn.yc:YCProgressLib:1.2.7'
-    compile project(path: ':YCProgressLib')
+    implementation project(path: ':BaseProgressLib')
+    implementation project(path: ':CircleProgressLib')
 }
