--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.annotation:annotation:1.1.0'
     //公共类
-//    compile 'cn.yc:YCProgressLib:1.2.7'
-    implementation project(path: ':BaseProgressLib')
-    implementation project(path: ':CircleProgressLib')
+    implementation 'com.github.yangchong211.YCProgress:BaseProgressLib:1.2.8'
+    implementation 'com.github.yangchong211.YCProgress:CircleProgressLib:1.2.8'
+//    implementation project(path: ':BaseProgressLib')
+//    implementation project(path: ':CircleProgressLib')
 }
