--- a/AppBaseStore/build.gradle
+++ b/AppBaseStore/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
+    implementation project(path: ':ToolUtilsLib')
     //腾讯mmkv库
     implementation "com.tencent:mmkv-static:1.2.7"
 }
