--- a/AppRestartLib/src/main/AndroidManifest.xml
+++ b/AppRestartLib/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.yc.apprestartlib">
 
     <application>
-        <service android:name="com.yc.apprestartlib.KillSelfService"/>
+        <service android:name=".KillSelfService"
+            android:process=":restart"/>
     </application>
 </manifest>
