--- a/CommonBusiness/build.gradle
+++ b/CommonBusiness/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
     //buildToolsVersion rootProject.ext.android["buildToolsVersion"]
     defaultConfig {
-        applicationId "com.yc.ycprogress"
+        applicationId "com.yc.common"
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
