--- a/CommonBusiness/build.gradle
+++ b/CommonBusiness/build.gradle
@@ -28,13 +28,29 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
+    //base基类
+    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.0'
+    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.3.0'
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.0'
+    //activity栈管理
+    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.0'
+    //通用缓存存储库，支持sp，fastsp，mmkv，lruCache，DiskLruCache等
+    implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:1.3.0'
+    //通用日志输出库
+    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.0'
+    //app重启库
+    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.0'
+    //intent内容输出到控制台
+    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.3.0'
+
     //公共类
-    implementation project(path: ':BaseClassLib')
-    implementation project(path: ':ComponentLib')
-    implementation project(path: ':ToolUtilsLib')
-    implementation project(path: ':ActivityManager')
-    implementation project(path: ':AppBaseStore')
-    implementation project(path: ':AppLogLib')
-    implementation project(path: ':AppRestartLib')
-    implementation project(path: ':SafeIntentLib')
+//    implementation project(path: ':BaseClassLib')
+//    implementation project(path: ':ComponentLib')
+//    implementation project(path: ':ToolUtilsLib')
+//    implementation project(path: ':ActivityManager')
+//    implementation project(path: ':AppBaseStore')
+//    implementation project(path: ':AppLogLib')
+//    implementation project(path: ':AppRestartLib')
+//    implementation project(path: ':SafeIntentLib')
 }
