--- a/ArchitectureLib/build.gradle
+++ b/ArchitectureLib/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.library'
 apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
 apply plugin: 'kotlin-android'
+//迁移到jitpack
+apply plugin: 'com.github.dcendents.android-maven'
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
