--- a/CommonBusiness/build.gradle
+++ b/CommonBusiness/build.gradle
@@ -38,11 +38,19 @@ dependencies {
     //通用缓存存储库，支持sp，fastsp，mmkv，lruCache，DiskLruCache等
     implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:1.3.0'
     //通用日志输出库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.2'
     //app重启库
-    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.2'
     //intent内容输出到控制台
-    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.3.0'
+    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.3.2'
+    //通用组件接口库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.3.2'
+//    //各种广播监听哭
+//    implementation 'com.github.yangchong211.YCCommonLib:AppStatusLib:1.3.2'
+//    //基建库
+//    implementation 'com.github.yangchong211.YCCommonLib:ArchitectureLib:1.3.2'
+//    //同上上报库
+//    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.2'
 
     //公共类
 //    implementation project(path: ':BaseClassLib')
@@ -53,4 +61,8 @@ dependencies {
 //    implementation project(path: ':AppLogLib')
 //    implementation project(path: ':AppRestartLib')
 //    implementation project(path: ':SafeIntentLib')
+//    implementation project(path: ':AppCommonInter')
+//    implementation project(path: ':AppStatusLib')
+//    implementation project(path: ':ArchitectureLib')
+//    implementation project(path: ':EventUploadLib')
 }
