--- a/CommonBusiness/build.gradle
+++ b/CommonBusiness/build.gradle
@@ -9,7 +9,8 @@ android {
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        // dex突破65535的限制
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -28,41 +29,49 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
-    //base基类
-    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.3'
-    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.3.3'
-    //工具类utils
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.3'
-    //activity栈管理
-    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.3'
-    //通用缓存存储库，支持sp，fastsp，mmkv，lruCache，DiskLruCache等
-    implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:1.3.3'
-    //通用日志输出库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.3'
-    //app重启库
-    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.3'
-    //intent内容输出到控制台
-    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.3.3'
-    //通用组件接口库
-    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.3.3'
-    //各种广播监听哭
-    implementation 'com.github.yangchong211.YCCommonLib:AppStatusLib:1.3.3'
-    //基建库
-    implementation 'com.github.yangchong211.YCCommonLib:ArchitectureLib:1.3.3'
-    //同上上报库
-    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.3'
+//    //base基类
+//    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.3'
+//    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.3.3'
+//    //工具类utils
+//    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.3'
+//    //activity栈管理
+//    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.3'
+//    //通用缓存存储库，支持sp，fastsp，mmkv，lruCache，DiskLruCache等
+//    implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:1.3.3'
+//    //通用日志输出库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.3'
+//    //app重启库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.3'
+//    //intent内容输出到控制台
+//    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.3.3'
+//    //通用组件接口库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.3.3'
+//    //各种广播监听哭
+//    implementation 'com.github.yangchong211.YCCommonLib:AppStatusLib:1.3.3'
+//    //基建库
+//    implementation 'com.github.yangchong211.YCCommonLib:ArchitectureLib:1.3.3'
+//    //同上上报库
+//    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.3'
 
     //公共类
-//    implementation project(path: ':BaseClassLib')
-//    implementation project(path: ':ComponentLib')
-//    implementation project(path: ':ToolUtilsLib')
-//    implementation project(path: ':ActivityManager')
-//    implementation project(path: ':AppBaseStore')
-//    implementation project(path: ':AppLogLib')
-//    implementation project(path: ':AppRestartLib')
-//    implementation project(path: ':SafeIntentLib')
-//    implementation project(path: ':AppCommonInter')
-//    implementation project(path: ':AppStatusLib')
-//    implementation project(path: ':ArchitectureLib')
-//    implementation project(path: ':EventUploadLib')
+    implementation project(path: ':BaseClassLib')
+    implementation project(path: ':ComponentLib')
+    implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':ActivityManager')
+    implementation project(path: ':AppBaseStore')
+    implementation project(path: ':AppLogLib')
+    implementation project(path: ':AppRestartLib')
+    implementation project(path: ':SafeIntentLib')
+    implementation project(path: ':AppCommonInter')
+    implementation project(path: ':AppStatusLib')
+    implementation project(path: ':ArchitectureLib')
+    implementation project(path: ':EventUploadLib')
+    implementation project(path: ':AppLruDisk')
+    implementation project(path: ':AppCompress')
+    implementation project(path: ':AppLruCache')
+    implementation project(path: ':AppPermission')
+    implementation project(path: ':FragmentManager')
+    implementation project(path: ':ToolMemoryLib')
+    implementation project(path: ':ReflectionLib')
+    implementation project(path: ':ParallelTaskLib')
 }
