优化组件库

--- a/CommonBusiness/build.gradle
+++ b/CommonBusiness/build.gradle
@@ -29,29 +29,43 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
-//    //base基类
-//    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.4'
-//    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.3.4'
-//    //工具类utils
-//    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.4'
-//    //activity栈管理
-//    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.4'
-//    //通用缓存存储库，支持sp，fastsp，mmkv，lruCache，DiskLruCache等
-//    implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:1.3.4'
-//    //通用日志输出库
-//    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.4'
-//    //app重启库
-//    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.4'
-//    //intent内容输出到控制台
-//    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.3.4'
-//    //通用组件接口库
-//    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.3.4'
-//    //各种广播监听哭
-//    implementation 'com.github.yangchong211.YCCommonLib:AppStatusLib:1.3.4'
-//    //基建库
-//    implementation 'com.github.yangchong211.YCCommonLib:ArchitectureLib:1.3.4'
-////    //同上上报库
-//    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.4'
+    //base基类
+    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.3.5'
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
+    //activity栈管理
+    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.5'
+    //通用缓存存储库，支持sp，fastsp，mmkv，lruCache，DiskLruCache等
+    implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:1.3.5'
+    //通用日志输出库
+    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.5'
+    //app重启库
+    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.5'
+    //intent内容输出到控制台
+    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.3.5'
+    //通用组件接口库
+    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.3.5'
+    //各种广播监听哭
+    implementation 'com.github.yangchong211.YCCommonLib:AppStatusLib:1.3.5'
+    //基建库
+    implementation 'com.github.yangchong211.YCCommonLib:ArchitectureLib:1.3.5'
+    //同上上报库
+    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.5'
+    //权限库
+    implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.3.5'
+    //Lru磁盘缓存库
+    implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:1.3.5'
+    //Lru磁盘缓存库
+    implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:1.3.5'
+    //Lru内存缓存库
+    implementation 'com.github.yangchong211.YCCommonLib:AppLruCache:1.3.5'
+    //fragment生命周期监听库
+    implementation 'com.github.yangchong211.YCCommonLib:FragmentManager:1.3.5'
+    //反射工具库
+    implementation 'com.github.yangchong211.YCCommonLib:ReflectionLib:1.3.5'
+    //App启动优化库
+    implementation 'com.github.yangchong211.YCCommonLib:ParallelTaskLib:1.3.5'
 
     //公共类
     implementation project(path: ':BaseClassLib')
