--- a/CommonBusiness/build.gradle
+++ b/CommonBusiness/build.gradle
@@ -29,43 +29,72 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
-    //base基类
-    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
-    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.3.5'
-    //工具类utils
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
-    //activity栈管理
-    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.5'
-    //通用缓存存储库，支持sp，fastsp，mmkv，lruCache，DiskLruCache等
-    implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:1.3.5'
-    //通用日志输出库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.5'
-    //app重启库
-    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.5'
-    //intent内容输出到控制台
-    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.3.5'
-    //通用组件接口库
-    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.3.5'
-    //各种广播监听哭
-    implementation 'com.github.yangchong211.YCCommonLib:AppStatusLib:1.3.5'
-    //基建库
-    implementation 'com.github.yangchong211.YCCommonLib:ArchitectureLib:1.3.5'
-    //同上上报库
-    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.5'
-    //权限库
-    implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.3.5'
-    //Lru磁盘缓存库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:1.3.5'
-    //Lru磁盘缓存库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:1.3.5'
-    //Lru内存缓存库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLruCache:1.3.5'
-    //fragment生命周期监听库
-    implementation 'com.github.yangchong211.YCCommonLib:FragmentManager:1.3.5'
-    //反射工具库
-    implementation 'com.github.yangchong211.YCCommonLib:ReflectionLib:1.3.5'
-    //App启动优化库
-    implementation 'com.github.yangchong211.YCCommonLib:ParallelTaskLib:1.3.5'
+//    //base基类
+//    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
+//    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.3.5'
+//    //工具类utils
+//    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
+//    //activity栈管理
+//    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.5'
+//    //通用缓存存储库，支持sp，fastsp，mmkv，lruCache，DiskLruCache等
+//    implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:1.3.5'
+//    //通用日志输出库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.5'
+//    //app重启库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.5'
+//    //intent内容输出到控制台
+//    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.3.5'
+//    //通用组件接口库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.3.5'
+//    //各种广播监听哭
+//    implementation 'com.github.yangchong211.YCCommonLib:AppStatusLib:1.3.5'
+//    //基建库
+//    implementation 'com.github.yangchong211.YCCommonLib:ArchitectureLib:1.3.5'
+//    //同上上报库
+//    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.5'
+//    //权限库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.3.5'
+//    //Lru磁盘缓存库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:1.3.5'
+//    //Lru磁盘缓存库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:1.3.5'
+//    //Lru内存缓存库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppLruCache:1.3.5'
+//    //fragment生命周期监听库
+//    implementation 'com.github.yangchong211.YCCommonLib:FragmentManager:1.3.5'
+//    //反射工具库
+//    implementation 'com.github.yangchong211.YCCommonLib:ReflectionLib:1.3.5'
+//    //App启动优化库
+//    implementation 'com.github.yangchong211.YCCommonLib:ParallelTaskLib:1.3.5'
+//    //Context上下文库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppContextLib:1.3.5'
+//    //加解密库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppEncryptLib:1.3.5'
+//    //handler包装库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppHandlerLib:1.3.5'
+//    //Application库
+//    implementation 'com.github.yangchong211.YCCommonLib:ApplicationLib:1.3.5'
+//    //store磁盘分区库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppMediaStore:1.3.5'
+//    //屏幕截屏库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppScreenLib:1.3.5'
+//    //Wi-Fi库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppWiFiLib:1.3.5'
+//    //Vp相关适配器库
+//    implementation 'com.github.yangchong211.YCCommonLib:BaseVpAdapter:1.3.5'
+//    //io流读写库
+//    implementation 'com.github.yangchong211.YCCommonLib:FileIoHelper:1.3.5'
+//    //图片工具库
+//    implementation 'com.github.yangchong211.YCCommonLib:ImageToolLib:1.3.5'
+//    //网络判断库
+//    implementation 'com.github.yangchong211.YCCommonLib:NetWorkLib:1.3.5'
+//    //手机
+//    implementation 'com.github.yangchong211.YCCommonLib:PhoneSensor:1.3.5'
+//    //File文件库
+//    implementation 'com.github.yangchong211.YCCommonLib:ToolFileLib:1.3.5'
+//    //Zip压缩库
+//    implementation 'com.github.yangchong211.YCCommonLib:ZipFileLib:1.3.5'
+
 
     //公共类
     implementation project(path: ':BaseClassLib')
@@ -88,5 +117,18 @@ dependencies {
     implementation project(path: ':ToolMemoryLib')
     implementation project(path: ':ReflectionLib')
     implementation project(path: ':ParallelTaskLib')
-
+    implementation project(path: ':AppContextLib')
+    implementation project(path: ':AppEncryptLib')
+    implementation project(path: ':AppHandlerLib')
+    implementation project(path: ':AppMediaStore')
+    implementation project(path: ':AppScreenLib')
+    implementation project(path: ':AppWiFiLib')
+    implementation project(path: ':BaseVpAdapter')
+    implementation project(path: ':DownloadHelper')
+    implementation project(path: ':FileIoHelper')
+    implementation project(path: ':ImageToolLib')
+    implementation project(path: ':NetWorkLib')
+    implementation project(path: ':PhoneSensor')
+    implementation project(path: ':ToolFileLib')
+    implementation project(path: ':ZipFileLib')
 }
