--- a/AppRestartLib/src/main/AndroidManifest.xml
+++ b/AppRestartLib/src/main/AndroidManifest.xml
@@ -5,6 +5,6 @@
     <application>
         <!--<service android:name="com.yc.apprestartlib.KillSelfService"
             android:process=":restart"/>-->
-        <service android:name="com.yc.apprestartlib.impl.ServiceRestartImpl$KillSelfService" />
+        <service android:name="com.yc.apprestartlib.ServiceRestartImpl$KillSelfService" />
     </application>
 </manifest>
