优化组件库

--- a/CommonBusiness/build.gradle
+++ b/CommonBusiness/build.gradle
@@ -131,4 +131,5 @@ dependencies {
     implementation project(path: ':PhoneSensor')
     implementation project(path: ':ToolFileLib')
     implementation project(path: ':ZipFileLib')
+    implementation project(path: ':ApplicationLib')
 }
