--- a/CommonBusiness/build.gradle
+++ b/CommonBusiness/build.gradle
@@ -31,9 +31,9 @@ dependencies {
     implementation rootProject.ext.dependencies["annotation"]
 //    //base基类
     implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.5'
-//    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.3.8'
+    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.3.5'
     //工具类utils
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.8'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.5'
     //activity栈管理
     implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.8'
     //通用缓存存储库，支持sp，fastsp，mmkv，lruCache，DiskLruCache等
@@ -41,9 +41,9 @@ dependencies {
     //通用日志输出库
     implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.3.8'
     //app重启库
-    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.6'
+    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.5'
     //intent内容输出到控制台
-    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.3.6'
+    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.3.5'
     //通用组件接口库
     implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.3.8'
     //各种广播监听哭
@@ -54,8 +54,6 @@ dependencies {
     implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.3.5'
     //权限库
     implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.3.8'
-    //Lru磁盘缓存库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:1.3.8'
     //Lru磁盘缓存库
     implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:1.3.8'
     //Lru内存缓存库
@@ -73,9 +71,11 @@ dependencies {
     //handler包装库
     implementation 'com.github.yangchong211.YCCommonLib:AppHandlerLib:1.3.8'
     //Application库
-    implementation 'com.github.yangchong211.YCCommonLib:ApplicationLib:1.3.8'
+//    implementation 'com.github.yangchong211.YCCommonLib:ApplicationLib:1.3.8'
     //store磁盘分区库
     implementation 'com.github.yangchong211.YCCommonLib:AppMediaStore:1.3.8'
+    //内存
+    implementation 'com.github.yangchong211.YCCommonLib:ToolMemoryLib:1.3.5'
 //    //屏幕截屏库
 //    implementation 'com.github.yangchong211.YCCommonLib:AppScreenLib:1.3.8'
 //    //Wi-Fi库
@@ -98,30 +98,30 @@ dependencies {
 //    implementation 'com.github.yangchong211.YCCommonLib:ApplicationLib:1.3.8'
 
     //公共类
-//    implementation project(path: ':BaseClassLib')
-//    implementation project(path: ':ComponentLib')
-//    implementation project(path: ':ToolUtilsLib')
-//    implementation project(path: ':ActivityManager')
-//    implementation project(path: ':AppBaseStore')
-//    implementation project(path: ':AppLogLib')
-//    implementation project(path: ':AppRestartLib')
-//    implementation project(path: ':SafeIntentLib')
-//    implementation project(path: ':AppCommonInter')
-//    implementation project(path: ':AppStatusLib')
-//    implementation project(path: ':ArchitectureLib')
-//    implementation project(path: ':EventUploadLib')
-//    implementation project(path: ':AppLruDisk')
-//    implementation project(path: ':AppCompress')
-//    implementation project(path: ':AppLruCache')
-//    implementation project(path: ':AppPermission')
-//    implementation project(path: ':FragmentManager')
-//    implementation project(path: ':ToolMemoryLib')
-//    implementation project(path: ':ReflectionLib')
-//    implementation project(path: ':ParallelTaskLib')
-//    implementation project(path: ':AppContextLib')
-//    implementation project(path: ':AppEncryptLib')
-//    implementation project(path: ':AppHandlerLib')
-//    implementation project(path: ':AppMediaStore')
+    implementation project(path: ':BaseClassLib')
+    implementation project(path: ':ComponentLib')
+    implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':ActivityManager')
+    implementation project(path: ':AppBaseStore')
+    implementation project(path: ':AppLogLib')
+    implementation project(path: ':AppRestartLib')
+    implementation project(path: ':SafeIntentLib')
+    implementation project(path: ':AppCommonInter')
+    implementation project(path: ':AppStatusLib')
+    implementation project(path: ':ArchitectureLib')
+    implementation project(path: ':EventUploadLib')
+    implementation project(path: ':AppLruDisk')
+    implementation project(path: ':AppCompress')
+    implementation project(path: ':AppLruCache')
+    implementation project(path: ':AppPermission')
+    implementation project(path: ':FragmentManager')
+    implementation project(path: ':ToolMemoryLib')
+    implementation project(path: ':ReflectionLib')
+    implementation project(path: ':ParallelTaskLib')
+    implementation project(path: ':AppContextLib')
+    implementation project(path: ':AppEncryptLib')
+    implementation project(path: ':AppHandlerLib')
+    implementation project(path: ':AppMediaStore')
     implementation project(path: ':AppScreenLib')
     implementation project(path: ':AppWiFiLib')
     implementation project(path: ':BaseVpAdapter')
