--- a/CommonBusiness/build.gradle
+++ b/CommonBusiness/build.gradle
@@ -30,72 +30,72 @@ dependencies {
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
     //base基类
-    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:v1.4.0'
-    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.4.3'
+    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.4.3'
     //工具类utils
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.3'
     //activity栈管理
-    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.4.3'
     //通用缓存存储库，支持sp，fastsp，mmkv，lruCache，DiskLruCache等
-    implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:1.4.3'
     //通用日志输出库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.4.3'
     //app重启库
-//    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.5'
+    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.4.3'
     //intent内容输出到控制台
-    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.4.3'
     //通用组件接口库
-    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.4.3'
     //各种广播监听哭
-    implementation 'com.github.yangchong211.YCCommonLib:AppStatusLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppStatusLib:1.4.3'
     //基建库
-    implementation 'com.github.yangchong211.YCCommonLib:ArchitectureLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:ArchitectureLib:1.4.3'
     //同上上报库
-    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.4.3'
     //权限库
-    implementation 'com.github.yangchong211.YCCommonLib:AppPermission:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.4.3'
     //Lru磁盘缓存库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:1.4.3'
     //Lru内存缓存库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLruCache:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppLruCache:1.4.3'
     //fragment生命周期监听库
-    implementation 'com.github.yangchong211.YCCommonLib:FragmentManager:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:FragmentManager:1.4.3'
     //反射工具库
-    implementation 'com.github.yangchong211.YCCommonLib:ReflectionLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:ReflectionLib:1.4.3'
     //App启动优化库
-    implementation 'com.github.yangchong211.YCCommonLib:ParallelTaskLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:ParallelTaskLib:1.4.3'
     //Context上下文库
-    implementation 'com.github.yangchong211.YCCommonLib:AppContextLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppContextLib:1.4.3'
     //加解密库
-    implementation 'com.github.yangchong211.YCCommonLib:AppEncryptLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppEncryptLib:1.4.3'
     //handler包装库
-    implementation 'com.github.yangchong211.YCCommonLib:AppHandlerLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppHandlerLib:1.4.3'
     //Application库
-    implementation 'com.github.yangchong211.YCCommonLib:ApplicationLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:ApplicationLib:1.4.3'
     //store磁盘分区库
-    implementation 'com.github.yangchong211.YCCommonLib:AppMediaStore:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppMediaStore:1.4.3'
     //内存
-    implementation 'com.github.yangchong211.YCCommonLib:ToolMemoryLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolMemoryLib:1.4.3'
     //屏幕截屏库
-    implementation 'com.github.yangchong211.YCCommonLib:AppScreenLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppScreenLib:1.4.3'
     //Wi-Fi库
-    implementation 'com.github.yangchong211.YCCommonLib:AppWiFiLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppWiFiLib:1.4.3'
     //Vp相关适配器库
-    implementation 'com.github.yangchong211.YCCommonLib:BaseVpAdapter:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:BaseVpAdapter:1.4.3'
     //io流读写库
-    implementation 'com.github.yangchong211.YCCommonLib:FileIoHelper:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:FileIoHelper:1.4.3'
     //图片工具库
-    implementation 'com.github.yangchong211.YCCommonLib:ImageToolLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:ImageToolLib:1.4.3'
     //网络判断库
-    implementation 'com.github.yangchong211.YCCommonLib:NetWorkLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:NetWorkLib:1.4.3'
     //手机
-    implementation 'com.github.yangchong211.YCCommonLib:PhoneSensor:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:PhoneSensor:1.4.3'
     //File文件库
-    implementation 'com.github.yangchong211.YCCommonLib:ToolFileLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:ToolFileLib:1.4.3'
     //Zip压缩库
-    implementation 'com.github.yangchong211.YCCommonLib:ZipFileLib:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:ZipFileLib:1.4.3'
     //图片压缩
-//    implementation 'com.github.yangchong211.YCCommonLib:AppCompress:v1.4.0'
+    implementation 'com.github.yangchong211.YCCommonLib:AppCompress:1.4.3'
 
     //公共类
 //    implementation project(path: ':BaseClassLib')
@@ -111,7 +111,7 @@ dependencies {
 //    implementation project(path: ':ArchitectureLib')
 //    implementation project(path: ':EventUploadLib')
 //    implementation project(path: ':AppLruDisk')
-    implementation project(path: ':AppCompress')
+//    implementation project(path: ':AppCompress')
 //    implementation project(path: ':AppLruCache')
 //    implementation project(path: ':AppPermission')
 //    implementation project(path: ':FragmentManager')
