--- a/settings.gradle
+++ b/settings.gradle
@@ -35,3 +35,6 @@ include ':NetWorkLib'
 include ':PhoneSensor'
 include ':ToolFileLib'
 include ':ZipFileLib'
+include ':AppFastSp'
+include ':AppCallStatus'
+include ':AppGrayLib'
