完善基础组件库

--- a/AppBaseStore/build.gradle
+++ b/AppBaseStore/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation rootProject.ext.dependencies["annotation"]
     implementation rootProject.ext.dependencies["datastore"]
     implementation rootProject.ext.dependencies["coreKtx"]
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation(rootProject.ext.dependencies["gson"])
     implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.4.3'
     implementation project(path: ':ToolUtilsLib')
     implementation project(path: ':EventUploadLib')
